--- a/wp7Calendar/res/layout/main.xml
+++ b/wp7Calendar/res/layout/main.xml
@@ -14,11 +14,12 @@
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:layout_weight="0.48" >
-
+
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="yellow"
+            android:text="blue"
             android:textSize="15dp" />
 
     </LinearLayout>
