--- a/wp7Calendar/res/layout/main.xml
+++ b/wp7Calendar/res/layout/main.xml
@@ -19,7 +19,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="blue"
+            android:text="green"
             android:textSize="15dp" />
 
     </LinearLayout>
