--- a/wp7Calendar/res/layout/main.xml
+++ b/wp7Calendar/res/layout/main.xml
@@ -12,42 +12,57 @@
         android:text="Your total is:        0"
         android:textSize="40dp" />
 
-    <Button
-        android:id="@+id/bAdd"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:text="+"
-        android:layout_gravity="center"
-        android:textSize="35dp" />
-
-    <Button
-        android:id="@+id/bSub"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:text="-"
-        android:layout_gravity="center"
-        android:textSize="35dp" />
+    <LinearLayout
+        android:id="@+id/linearLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:layout_gravity="center">
 
 
 
 
-    <Button
-        android:id="@+id/bAddNum"
-        android:layout_width="216dp"
-        android:layout_height="wrap_content"
-        android:text="Increase amount added"
-        android:layout_gravity="center"
-        android:textSize="15dp" />
+
+
+        <Button
+            android:id="@+id/bAdd"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="+"
+            android:textSize="35dp" />
 
 
 
-    <Button
-        android:id="@+id/bSubNum"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Increase amount subtracted"
-        android:layout_gravity="center"
-        android:textSize="15dp" />
+
+        <Button
+            android:id="@+id/bSub"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="-"
+            android:textSize="35dp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <Button
+            android:id="@+id/bAddNum"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:text="Increase amount added"
+            android:textSize="15dp" />
+
+        <Button
+            android:id="@+id/bSubNum"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:text="Increase amount subtracted"
+            android:textSize="15dp" />
+
+    </LinearLayout>
 
 
     <TextView
